--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
+# Ignore bundler config.
+/.bundle
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+/log
+/log/*.log
+/tmp
+
 *.rbc
 capybara-*.html
 .rspec
-/log
-/tmp
-/db/*.sqlite3
+
 /public/system
 /coverage/
 /spec/tmp
@@ -13,7 +23,7 @@ pickle-email-*.html
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
-config/secrets.yml
+# config/secrets.yml
 
 ## Environment normalisation:
 /.bundle
