--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ rerun.txt
 pickle-email-*.html
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
-config/initializers/secret_token.rb
+# config/initializers/secret_token.rb
 # config/secrets.yml
 
 ## Environment normalisation:
