Still trying to exclude folders from rubocop

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ notifications:
     - dev@clarat.org
 script:
   - RAILS_ENV=test bundle exec rake test:all
-  - bundle exec rubocop
+  - bundle exec rubocop --config rubocop.yml
