--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ pickle-email-*.html
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 # config/initializers/secret_token.rb
 # config/secrets.yml
+secrets
 
 ## Environment normalisation:
 /.bundle
