slim views, hamstache js templates, better autocomplete

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -4,6 +4,8 @@ development:
   algolia:
     app_id: <%= ENV['ALGOLIA_ID'] || 'WOULDNTYOU' %>
     api_key: <%= ENV['ALGOLIA_KEY'] || 'LIKETOKNOW' %>
+    pub_key: <%= ENV['ALGOLIA_PUB'] || '...' %>
+    index: 'Offer_development'
 
 production:
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
@@ -11,3 +13,5 @@ production:
   algolia:
     app_id: <%= ENV['ALGOLIA_ID'] %>
     api_key: <%= ENV['ALGOLIA_KEY'] %>
+    pub_key: <%= ENV['ALGOLIA_PUB'] %>
+    index: 'Offer_production'
