--- a/test/fixtures/offers.yml
+++ b/test/fixtures/offers.yml
@@ -3,7 +3,7 @@
 one:
   name: MyString
   description: MyString
-  todo: MyText
+  next_steps: MyText
   website: MyString
   telephone: MyString
   contact_name: MyString
@@ -29,7 +29,7 @@ one:
 two:
   name: MyString
   description: MyString
-  todo: MyText
+  next_steps: MyText
   website: MyString
   telephone: MyString
   contact_name: MyString
