--- a/test/fixtures/languages.yml
+++ b/test/fixtures/languages.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+deutsch:
+  name: Deutsch
+  code: de
 
-two:
-  name: MyString
+english:
+  name: English
+  code: en
