--- a/rubocop.yml
+++ b/rubocop.yml
@@ -7,6 +7,8 @@ AllCops:
     - 'config/application.rb'
     - 'config/environments/**/*'
     - 'config/initializers/**/*'
+    - 'test/test_helper.rb'
+    - 'test/support/**/*'
 
 Documentation:
   Enabled: false
@@ -22,3 +24,12 @@ RedundantSelf:
 
 LineLength:
   Enabled: false
+
+Style/SignalException:
+  Enabled: false
+
+Metrics/ClassLength:
+  Max: 115
+
+Metrics/MethodLength:
+  Max: 13
