--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,7 @@
 # inherit_from: rubocop_todo.yml
 
 AllCops:
+  RunRailsCops: true
   Exclude:
     - 'db/**/*'
     - 'vendor/**/*'
@@ -9,6 +10,9 @@ AllCops:
     - 'config/initializers/**/*'
     - 'test/test_helper.rb'
     - 'test/support/**/*'
+
+HasAndBelongsToMany:
+  Enabled: false
 
 Documentation:
   Enabled: false
