--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -38,7 +38,7 @@ development:
     list_id: <%= ENV['MAILCHIMP_LIST'] || '1' %>
   admin_email: <%= ENV['ADMIN_EMAIL'] || 'example@example.org' %>
 
-production:
+production: &all_secret
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
   devise_secret_key: <%= ENV['DEVISE_KEY'] %>
   google:
@@ -57,3 +57,5 @@ production:
     key: <%= ENV['MAILCHIMP_KEY'] %>
     list_id: <%= ENV['MAILCHIMP_LIST'] %>
   admin_email: <%= ENV['ADMIN_EMAIL'] %>
+
+staging: *all_secret
