--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -38,14 +38,14 @@ development:
     list_id: <%= ENV['MAILCHIMP_LIST'] || '1' %>
   admin_email: <%= ENV['ADMIN_EMAIL'] || 'example@example.org' %>
 
-production: &all_secret
+production:
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
   devise_secret_key: <%= ENV['DEVISE_KEY'] %>
-  google:
+  google: &google_secret
     api: <%= ENV['GOOGLE_API'] %>
     id: <%= ENV['GOOGLE_ID'] %>
     secret: <%= ENV['GOOGLE_SECRET'] %>
-  facebook:
+  facebook: &fb_secret
     id: <%= ENV['GOOGLE_ID'] %>
     secret: <%= ENV['GOOGLE_SECRET'] %>
   algolia:
@@ -53,9 +53,20 @@ production: &all_secret
     api_key: <%= ENV['ALGOLIA_KEY'] %>
     pub_key: <%= ENV['ALGOLIA_PUB'] %>
     index: 'Offer_production'
-  mailchimp:
+  mailchimp: &mailchimp_secret
     key: <%= ENV['MAILCHIMP_KEY'] %>
     list_id: <%= ENV['MAILCHIMP_LIST'] %>
   admin_email: <%= ENV['ADMIN_EMAIL'] %>
 
-staging: *all_secret
+staging:
+  secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
+  devise_secret_key: <%= ENV['DEVISE_KEY'] %>
+  google: *google_secret
+  facebook: *fb_secret
+  algolia:
+    app_id: <%= ENV['ALGOLIA_ID'] %>
+    api_key: <%= ENV['ALGOLIA_KEY'] %>
+    pub_key: <%= ENV['ALGOLIA_PUB'] %>
+    index: 'Offer_staging' # <--- only difference
+  mailchimp: *mailchimp_secret
+  admin_email: <%= ENV['ADMIN_EMAIL'] %>
