finish #183 - expiration of offers

--- a/test/fixtures/offers.yml
+++ b/test/fixtures/offers.yml
@@ -4,5 +4,6 @@ basic:
   description: foobar
   next_steps: foobar
   encounter: independent
+  expires_at: 9999-01-01
   completed: t
   approved: t
