search rework partial success: multiple indices, batched queries

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -12,7 +12,6 @@ test:
     app_id: 'test'
     api_key: 'test'
     pub_key: 'test'
-    index: 'test'
   mailchimp:
     key: 'test'
     list_id: '1'
@@ -34,7 +33,6 @@ development:
     app_id: <%= ENV['ALGOLIA_ID'] || 'WOULDNTYOU' %>
     api_key: <%= ENV['ALGOLIA_KEY'] || 'LIKETOKNOW' %>
     pub_key: <%= ENV['ALGOLIA_PUB'] || '...' %>
-    index: 'Offer_development'
   mailchimp:
     key: <%= ENV['MAILCHIMP_KEY'] || '...' %>
     list_id: <%= ENV['MAILCHIMP_LIST'] || '1' %>
@@ -52,11 +50,10 @@ production:
   facebook: &fb_secret
     id: <%= ENV['GOOGLE_ID'] %>
     secret: <%= ENV['GOOGLE_SECRET'] %>
-  algolia:
+  algolia: &algolia
     app_id: <%= ENV['ALGOLIA_ID'] %>
     api_key: <%= ENV['ALGOLIA_KEY'] %>
     pub_key: <%= ENV['ALGOLIA_PUB'] %>
-    index: 'Offer_production'
   mailchimp: &mailchimp_secret
     key: <%= ENV['MAILCHIMP_KEY'] %>
     list_id: <%= ENV['MAILCHIMP_LIST'] %>
@@ -69,10 +66,6 @@ staging:
   devise_secret_key: <%= ENV['DEVISE_KEY'] %>
   google: *google_secret
   facebook: *fb_secret
-  algolia:
-    app_id: <%= ENV['ALGOLIA_ID'] %>
-    api_key: <%= ENV['ALGOLIA_KEY'] %>
-    pub_key: <%= ENV['ALGOLIA_PUB'] %>
-    index: 'Offer_staging' # <--- only difference
+  algolia: *algolia
   mailchimp: *mailchimp_secret
   emails: *emails
