--- a/test/fixtures/filters.yml
+++ b/test/fixtures/filters.yml
@@ -4,7 +4,6 @@ deutsch:
   type: LanguageFilter
   name: Deutsch
   identifier: deu
-
 english:
   type: LanguageFilter
   name: English
@@ -15,7 +14,15 @@ baby_age:
   name: Babies
   identifier: babies
 
+personal_encounter:
+  type: EncounterFilter
+  name: persönliches Gespräch
+  identifier: personal
 hotline_encounter:
   type: EncounterFilter
   name: Telefon
   identifier: hotline
+online_encounter:
+  type: EncounterFilter
+  name: E-Mail und Chat
+  identifier: online
