--- a/test/fixtures/offers.yml
+++ b/test/fixtures/offers.yml
@@ -3,6 +3,7 @@ basic:
   name: foobar
   description: foobar
   next_steps: foobar
+  encounter: personal
   expires_at: 9999-01-01
   completed: t
   approved: t
