add newrelic sidekiq agent

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -40,7 +40,7 @@ development:
   emails:
     admin: <%= ENV['ADMIN_EMAIL'] || 'example@example.org' %>
     expiring: 'example@example.org'
-  newrelic: ''
+  newrelic: <%= ENV['NEW_RELIC_LICENSE_KEY'] || '' %>
 
 production:
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
