puzzling deploy bug ... testing 3

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -83,5 +83,5 @@ staging:
   emails: *emails
   newrelic: <%= ENV['NEW_RELIC_LICENSE_KEY'] %>
   protect:
-    user: <%= ENV['STAGING_UNAME'] %>
-    pwd: <%= ENV['STAGING_PWD'] %>
+    user: "<%= ENV['STAGING_UNAME'] %>"
+    pwd: "<%= ENV['STAGING_PWD'] %>"
