for #411 - finish implementing and improve state machine, fix bugs and tests

--- a/test/fixtures/offers.yml
+++ b/test/fixtures/offers.yml
@@ -7,6 +7,7 @@ basic:
   expires_at: 9999-01-01
   age_from: 0
   age_to: 18
-  completed: t
-  approved: t
+  aasm_state: approved
   location_id: 1
+  created_by: 1
+  approved_by: 2
