--- a/test/fixtures/filters.yml
+++ b/test/fixtures/filters.yml
@@ -23,3 +23,7 @@ acquintances:
   type: TargetAudienceFilter
   name: Bekannte
   identifier: acquintances
+pregnant_woman:
+  type: TargetAudienceFilter
+  name: Schwangere
+  identifier: pregnant_woman
