for #446 - implement asana integration into expiring ovvers worker

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,6 +22,7 @@ test:
     admin: 'example@example.org'
     expiring: 'example@example.org'
   newrelic: ''
+  asana_token: 'test'
 
 development:
   protect:
@@ -47,6 +48,7 @@ development:
     admin: <%= ENV['ADMIN_EMAIL'] || 'example@example.org' %>
     expiring: 'example@example.org'
   newrelic: <%= ENV['NEW_RELIC_LICENSE_KEY'] || '' %>
+  asana_token: 'Dont actually post to asana with your local test data.'
 
 production:
   protect:
@@ -72,6 +74,7 @@ production:
     admin: <%= ENV['ADMIN_EMAIL'] %>
     expiring: <%= ENV['EXPIRING_EMAIL'] %>
   newrelic: <%= ENV['NEW_RELIC_LICENSE_KEY'] %>
+  asana_token: <%= ENV['ASANA_TOKEN'] %>
 
 staging:
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
@@ -82,6 +85,7 @@ staging:
   mailchimp: *mailchimp_secret
   emails: *emails
   newrelic: <%= ENV['NEW_RELIC_LICENSE_KEY'] %>
+  asana_token: <%= ENV['ASANA_TOKEN'] %>
   protect:
     user: "<%= ENV['STAGING_UNAME'] %>"
     pwd: "<%= ENV['STAGING_PWD'] %>"
