add google public key

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,8 @@ MAILCHIMP_LIST=
 ALGOLIA_ID=
 ALGOLIA_KEY=
 ALGOLIA_PUB=
+NEW_RELIC_LICENSE_KEY=
+GOOGLE_API=
+GOOGLE_PUBLIC=
+ASANA_TOKEN=
 LOCALEAPP_KEY=
