allow developer to use the production search index

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -7,6 +7,7 @@ test:
   google:
     api: 'test'
     public: 'test'
+  force_production_index: false
   algolia:
     app_id: 'test'
     api_key: 'test'
@@ -29,6 +30,7 @@ development:
   google:
     api: <%= ENV['GOOGLE_API'] %>
     public: <%= ENV['GOOGLE_PUBLIC'] %>
+  force_production_index: <%= ENV['FORCE_PRODUCTION_INDEX'] || false %>
   algolia:
     app_id: <%= ENV['ALGOLIA_ID'] || 'WOULDNTYOU' %>
     api_key: <%= ENV['ALGOLIA_KEY'] || 'LIKETOKNOW' %>
@@ -51,6 +53,7 @@ production:
   google: &google_secret
     api: <%= ENV['GOOGLE_API'] %>
     public: <%= ENV['GOOGLE_PUBLIC'] %>
+  force_production_index: false
   algolia: &algolia
     app_id: <%= ENV['ALGOLIA_ID'] %>
     api_key: <%= ENV['ALGOLIA_KEY'] %>
@@ -68,6 +71,7 @@ staging:
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
   devise_secret_key: <%= ENV['DEVISE_KEY'] %>
   google: *google_secret
+  force_production_index: false
   algolia: *algolia
   mailchimp: *mailchimp_secret
   emails: *emails
