--- a/config/database.yml
+++ b/config/database.yml
@@ -20,5 +20,4 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: ":memory:"
-  verbosity: silent
+  database: clarat_test
