copy fixtures from claradmin

--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -2,8 +2,9 @@ basic:
   id: 1
   street: basicStreet 1
   zip: 12345
-  city_id: 1
   hq: t
+  city_id: 1
   organization_id: 1
   federal_state_id: 1
   display_name: basicLocation
+  visible: t
