--- a/test/fixtures/filters_offers.yml
+++ b/test/fixtures/filters_offers.yml
@@ -1,7 +1,7 @@
-basicLanguage:
-  filter_id: 1
+basicSection:
+  filter_id: 8
   offer_id: 1
 
-basicAudience:
-  filter_id: 3
+basicLanguage:
+  filter_id: 1
   offer_id: 1
