--- a/test/fixtures/logic_versions.yml
+++ b/test/fixtures/logic_versions.yml
@@ -2,3 +2,7 @@ basic:
   id: 1
   version: 1
   name: basicLogicVersion
+current:
+  id: 2
+  version: 8 # keep this in sync with the actual version number on production
+  name: currentLogicVersion
