--- a/test/fixtures/offers.yml
+++ b/test/fixtures/offers.yml
@@ -6,13 +6,11 @@ basic:
   encounter: personal
   expires_at: 9999-01-01
   aasm_state: approved
-  location_id: 1
   created_by: 1
   approved_by: 2
   split_base_id: 1
-  logic_version_id: 1
   section_id: 1
+  location_id: 1
+  area_id: 1
   solution_category_id: 1
-  # contact_people: [ contact_one ]
-  slug: basicSlug
-  #location: basic
+  logic_version_id: 1
