--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -66,3 +66,6 @@ HttpPositionalArguments:
 # only alphabetical sort
 Bundler/OrderedGems:
   Enabled: false
+
+SkipsModelValidations:
+  Enabled: false
