update base, tests passing

--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -6,7 +6,6 @@ basic:
   city_id: 1
   organization_id: 1
   federal_state_id: 1
-  display_name: basicLocation
+  label: basicLocation
   visible: t
   organization_id: 1
-  #offer: basic
