--- a/config/database.yml
+++ b/config/database.yml
@@ -3,21 +3,20 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-# development:
-#   adapter: sqlite3
-#   database: db/development.sqlite3
-#   pool: 5
-#   timeout: 5000
-development:
+#
+default: &default
   adapter: postgresql
   encoding: unicode
-  database: clarat_development
   pool: 50
   host: localhost
+
+development:
+  <<: *default
+  database: clarat_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  <<: *default
+  database: clarat_test
