add more cities

--- a/config/city_names.yml
+++ b/config/city_names.yml
@@ -1,4 +1,5 @@
 berlin: Berlin
+duesseldorf: Düsseldorf
 hamburg: Hamburg
 muenchen: München
 dortmund: Dortmund
@@ -7,7 +8,10 @@ bonn: Bonn
 braunschweig: Braunschweig
 chemnitz: Chemnitz
 dresden: Dresden
+koeln: Köln
 neustadt: Neustadt
+nuernberg: Nürnberg
 oldenburg: Oldenburg
 saarbruecken: Saarbrücken
 schweinfurt: Schweinfurt
+stuttgart: Stuttgart
