--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,7 +28,8 @@ RedundantSelf:
   Enabled: false
 
 LineLength:
-  Enabled: false
+  Max: 81
+  Enabled: true
 
 Style/SignalException:
   Enabled: false
