--- a/config/city_names.yml
+++ b/config/city_names.yml
@@ -1,6 +1,7 @@
 berlin: Berlin
 duesseldorf: Düsseldorf
 hamburg: Hamburg
+hannover: Hannover
 muenchen: München
 dortmund: Dortmund
 bielefeld: Bielefeld
